# moffbot

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rustfmt.toml  serverless.yml
.github/: settings.yml
.github/workflows/: ci.yml  deploy.yml
src/: main.rs  octo_ext.rs  pr_reviews.rs
tests/: test-payload-wrong-org.json  test-payload.headers.txt  test-payload.json
