[package]
name = "moffbot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "~1.0"
chrono = "~0.4"
hex = "~0.4"
hmac = "~0.13"
lambda_http = "~1.1"
octocrab = { version = "~0.49", features = ["default-client"] }
serde = "~1.0"
serde_json = "~1.0"
sha2 = "~0.11"
tokio = { version = "~1.51", features = ["macros"] }

[dev-dependencies]
http = "~1.4"
